--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
     "xiaoler/blade":"*",
     "nikic/fast-route": "^0.7.0",
     "kilte/pagination": "^1.1",
-    "phpunit/phpunit": "~4.0"
+    "phpunit/phpunit": "~4.0",
+    "ircmaxell/filterus": "^1.0.0"
   },
   "autoload": {
     "psr-4": {
