--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
     "phpunit/phpunit": "~4.0",
     "ircmaxell/filterus": "^1.0.0",
     "slim/slim": "^3.3.0",
-    "ark/template": "^0.1.1"
+    "ark/template": "^0.1.1",
+    "ehesp/steam-login": "^1.1"
   },
   "autoload": {
     "psr-4": {
@@ -22,7 +23,9 @@
       "Root\\App\\Admin\\": "app/admin",
       "Root\\App\\Assists\\": "app/assists",
       "Root\\App\\Admin\\Base\\": "app/admin/base",
-      "Root\\App\\Admin\\Controller\\": "app/admin/controller"
+      "Root\\App\\Admin\\Controller\\": "app/admin/controller",
+      "Root\\App\\Web\\Base\\": "app/web/base",
+      "Root\\App\\Web\\Controller\\": "app/web/controller"
     }
   }
 }
